--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -9,10 +9,16 @@
 </head>
 
 <body>
-<h1>Главная</h1>
+
+  <h1>Главная</h1>
+
   <div>
-    <a href="regd.html"></a>
+    <a href="index.html">Главная страница</a>
+    <a href="pages/regd.html">Регистрация</a>
+    <a href="pages/auth.html">Авторизация</a>
+    <a href="pages/form.html">Анкета</a>
   </div>
+
 </body>
 
 </html>
