--- a/pages/form.html
+++ b/pages/form.html
@@ -9,13 +9,19 @@
 </head>
 
 <body>
+  <div>
+    <a href="../index.html">Главная страница</a>
+    <a href="regd.html">Регистрация</a>
+    <a href="auth.html">Авторизация</a>
+    <a href="form.html">Анкета</a>
+  </div>
+
+  <div>
+    <h1>Анкета</h1>
+    <h2>Заполните Ваши данные</h2>
+  </div>
 
   <form action="https://tests.fomenko.top/echo/index.php" method="get">
-
-    <div>
-      <h1>Анкета</h1>
-      <h2>Заполните Ваши данные</h2>
-    </div>
 
     <div>
       <label for="name"><b>Имя</b></label>
