--- a/pages/regd.html
+++ b/pages/regd.html
@@ -10,12 +10,18 @@
 
 <body>
 
-  <form action="https://tests.fomenko.top/echo/index.php" method="get">
+  <div>
+    <a href="../index.html">Главная страница</a>
+    <a href="regd.html">Регистрация</a>
+    <a href="auth.html">Авторизация</a>
+    <a href="form.html">Анкета</a>
+  </div>
+  <div>
+    <h1>Регистрация</h1>
+    <p>Заполните форму, чтобы создать аккаунт</p>
+  </div>
 
-    <div>
-      <h1>Регистрация</h1>
-      <p>Заполните форму, чтобы создать аккаунт</p>
-    </div>
+  <form action="https://tests.fomenko.top/echo/index.php" method="get">
 
     <div>
       <label for="email"><b>Email</b></label>
