--- a/pages/auth.html
+++ b/pages/auth.html
@@ -10,11 +10,18 @@
 
 <body>
 
-  <form action="https://tests.fomenko.top/echo/index.php" method="get">
+  <div>
+    <a href="../index.html">Главная страница</a>
+    <a href="regd.html">Регистрация</a>
+    <a href="auth.html">Авторизация</a>
+    <a href="form.html">Анкета</a>
+  </div>
 
-    <div>
-      <h1>Авторизация</h1>
-    </div>
+  <div>
+    <h1>Авторизация</h1>
+  </div>
+
+  <form action="https://tests.fomenko.top/echo/index.php" method="get">
 
     <div>
       <label for="login"><b>Логин</b></label>
